Fixed upload button not showing up after upload is complete.

--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ a {
 
 .woodenLog {
   font-family: WoodenLog;
-  color: lightsalmon;
+  color: #d7954a;
 }
 
 .caveatBrush {
